package NYT.NHiveServer.NProto;

import "yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqAcknowledgeMessages
{
    required NYT.NProto.TGuid cell_id = 1;
    required int64 next_persistent_incoming_message_id = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqUnregisterMailbox
{
    required NYT.NProto.TGuid cell_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

